@@ -15,6 +15,8 @@ Version 2.1.5
         Verstraete for providing a patch)
    - Updated TODO
    - Added Hubert Verstraete to contributors
+   - Bugfix: Obtaining keyboard focus automatically (thanks to Wade Berrier
+        for reminding us of this bug and for providing a patch)
 
 Version 2.1.4		2005-06-27 22:45
  * Robert Sowada
